# Homework_Django

./: .gitignore  README.md  catalog_fixture.json  pyproject.toml
blog/: urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/includes/: inc_menu.html
catalog/: forms.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_product_price.py
catalog/templates/: base.html  home.html
catalog/templates/catalog/: base.html  contacts.html  home.html  product_create.html  product_detail.html  product_list.html
config/: settings.py  urls.py
