[tool.poetry]
name = "homework-django"
version = "0.1.0"
description = ""
authors = ["Dmitriy_Selutin pblpra8@gmail.com "]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry = "^1.8.3"
python-dotenv = "^1.0.1"
ipython = "^8.29.0"
pillow = "^11.0.0"
django = "^5.1.4"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
